posts documentation added
