# src/routes/posts.ts
@@ -11,7 +11,7 @@ router.route("/posts")
     .get((req: Request, res: Response) => {
         // #swagger.tags = ['Posts']
         // #swagger.summary = 'Get all the blog posts'
-        //swagger.description ='The GET request only returns all the blogs written by the logged in author or user.'
+        // #swagger.description ='<p>The GET request only returns all the blogs written by the logged in author or user.</p>'
         // getAuthors(req, res);
     })
     .post((req: Request, res: Response) => {
@@ -23,16 +23,16 @@ router.route("/posts")
                        description: 'The logged in author/user id will be added to the post if the POST request is successful.\n
                        <h3>Fields</h3>\n
                        <ul>
-                       <li><b>title</b> A string : Required. The title of the post</li>
-                        <li><b>content</b> A string : Required. The content of the post</li>
-                         <li><b>tags</b>An array/list : Optional. All the tags related to the blog post</li>
-                          <li><b>summary</b>A string : Optional. A brief summary of the post</li>
-                           <li><b>status</b>A string : Optional. The status of the blog post.The status can either be "published" or "draft".\n 
-                           If the status of the post is "draft," then the post won't be available for viewing (the post won't show up in any post GET requests).\n 
-                           The default status is "published".</li>
-                           <li><b>category</b>A string : Optional. The category in which the post belongs. The default is 'miscellaneous'\n
-                           To see a list of all the available categories, make a GET request to /categories.
-                           </li>
+                        <li><p><b>title</b> &#187; A string : Required. The title of the post.</p></li>
+                        <li><p><b>content</b> &#187; A string : Required. The content of the post.</p></li>
+                        <li><p><b>tags</b> &#187; An array/list : Optional. All the tags related to the blog post.</p></li>
+                        <li><p><b>summary</b> &#187; A string : Optional. A brief summary of the post.</p></li>
+                        <li>
+                         <p><b>status</b> &#187; A string : Optional. The status of the blog post.The status can either be <i>published</i> or <i>draft</i>. The default status is <i>published</i>.</p>
+                        </li>
+                        <li>
+                          <p><b>category</b> &#187; A string : Optional. The category in which the post belongs. The default is <i>miscellaneous</i>. To see a list of all the available categories, make a GET request to <i>/categories</i>.</p>
+                        </li>
                        </ul>',
                        schema: { $ref: '#/definitions/addPost' }
                } 
@@ -44,10 +44,16 @@ router.route("/posts")
 
 
 router.route("/posts/:id")
+    .get((req: Request, res: Response) => {
+        // #swagger.tags = ['Posts']
+        // #swagger.summary = 'Find blog post by id'
+
+        // getAuthors(req, res);
+    })
     .put((req: Request, res: Response) => {
         // #swagger.tags = ['Posts']
         // #swagger.summary = 'Update an existing blog post'
-        //swagger.description ='You can only update blogs you've written. So, only a logged-in user can update their posts.'
+        // #swagger.description ='<p>You can only update blogs you've written. So, only a logged-in user can update their posts.</p>'
         /* 
        #swagger.parameters['obj'] = {
                      in: 'body',
@@ -61,7 +67,40 @@ router.route("/posts/:id")
     .delete((req: Request, res: Response) => {
         // #swagger.tags = ['Posts']
         // #swagger.summary = 'Delete a blog post'
-        //swagger.description ='You can only delete blogs you've written. So, only a logged-in user can delete their posts.'
+        // #swagger.description ='<p>You can only delete blogs you've written. So, only a logged-in user can delete their posts.</p>'
+        // getAuthors(req, res);
+    })
+
+router.route("/posts/findByTags")
+    .get((req: Request, res: Response) => {
+        // #swagger.tags = ['Posts']
+        // #swagger.summary = 'Find blog posts by tags'
+        // #swagger.description ='Tags to filter by'
+
+        /* 
+        #swagger.parameters['obj'] = {
+                     in: 'body',
+                     schema: { $ref: '#/definitions/tags' }
+             } 
+
+        */
+
+        // getAuthors(req, res);
+    })
+router.route("/posts/findByStatus")
+    .get((req: Request, res: Response) => {
+        // #swagger.tags = ['Posts']
+        // #swagger.summary = 'Find blog posts by status'
+        // #swagger.description ='<p>At the moment, there are only two available statuses: <i>draft</i> and <i>publish</i>.</p>'
+
+        /* 
+        #swagger.parameters['status'] = {
+                     schema: { $ref: '#/definitions/statuses' }
+                    
+             } 
+
+        */
+
         // getAuthors(req, res);
     })
 
